--- a/src/integration_tests/testplans/example.yaml
+++ b/src/integration_tests/testplans/example.yaml
@@ -1,12 +1,12 @@
 timeout: 3
 required_packages:
-- name: local_pathfinding
-  configs: null
-- name: network_systems
-  configs:
-  - all_disable.yaml
-  - example/example_en.yaml
-  - mock_ais/mock_ais_en_default.yaml
+  - name: local_pathfinding
+    configs:
+  - name: network_systems
+    configs:
+    - all_disable.yaml
+    - example/example_en.yaml
+    - mock_ais/mock_ais_en_default.yaml
 inputs:
   - type: ROS
     name: cached_fib_in
@@ -14,7 +14,7 @@ inputs:
       dtype: uint64
       val: 6
   - type: ROS
-    name: aisships
+    name: aisship
     data:
       dtype: AISShips
       ships:
