testing ssh config

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -10,7 +10,7 @@
 	],
 
 	"mounts": [
-			"source=${localEnv:HOME}/.ssh,target=/home/vscode/.ssh,type=bind,consistency=cached"
+			"source=${localEnv:HOME}/.ssh,target=/home/ros/.ssh,type=bind,consistency=cached"
 	],
 
 	"service": "sailbot-workspace",
