--- a/src/website/package.json
+++ b/src/website/package.json
@@ -14,9 +14,9 @@
     "@dnd-kit/sortable": "^8.0.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@mui/x-date-pickers": "^6.19.6",
     "@mui/icons-material": "^5.15.10",
     "@mui/material": "^5.15.12",
+    "@mui/x-date-pickers": "^6.19.6",
     "@react-google-maps/api": "^2.19.2",
     "@reduxjs/toolkit": "^1.9.5",
     "dayjs": "^1.11.10",
@@ -32,6 +32,7 @@
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
     "react-redux": "^8.1.2",
+    "react-select": "^5.8.0",
     "recharts": "^2.10.4",
     "redux": "^4.2.1",
     "redux-logger": "^3.0.6",
