--- a/src/local_pathfinding/requirements.txt
+++ b/src/local_pathfinding/requirements.txt
@@ -4,9 +4,8 @@
 # global_paths/path_builder/path_builder.py
 flask
 
-# test/test_obstacles.py
+# obstacle visual tests
 plotly
-
-# land_polygon_etl.py
-geopandas
-fiona
+folium
+mapclassify
+matplotlib
