--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -22,6 +22,9 @@ jobs:
         script: './scripts/run-tests'
         run-website: 'true'
 
+    - name: Install dependencies
+      run: pip3 install shapely==2.0.6
+
   ament-lint:
     strategy:
       fail-fast: false
