--- a/src/local_pathfinding/package.xml
+++ b/src/local_pathfinding/package.xml
@@ -23,7 +23,7 @@
   <test_depend>ament_flake8</test_depend>
   <test_depend>ament_pep257</test_depend>
   <test_depend>python3-pytest</test_depend>
-  <test_depend>python3-shapely</test_depend>
+  <test_depend>python3-shapely==2.0.6</test_depend>
 
   <export>
     <build_type>ament_python</build_type>
