--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -23,7 +23,7 @@ jobs:
 
     - name: Install dependencies
       run: |
-        pip3 install shapely==2.0.6
+        pip3 install shapely==2.0.6 numpy==1.26.4
 
     - name: test union_all installed
       run: |
