--- a/src/global_launch/config/globals.yaml
+++ b/src/global_launch/config/globals.yaml
@@ -60,6 +60,14 @@ physics_engine_node:
             corr_xy: 0.
          constant_params:
             value: [1.0, 0.0]
+      wind_generation:
+         mvgaussian_params:
+            mean: [5.0, 5.0, 0.0]
+            cov: "[[25.0, 10.0, 5.0], [10.0, 15.0, 2.0], [5.0, 2.0, 20.0]]"
+      current_generation:
+         mvgaussian_params:
+            mean: [1.0, 0.5, 0.0]
+            cov: "[[0.5, 0.1, 0.05], [0.1, 0.3, 0.02], [0.05, 0.02, 0.2]]"
 data_collection_node:
    ros__parameters:
       file_name: 'ros_data_collection'
