--- a/src/local_pathfinding/package.xml
+++ b/src/local_pathfinding/package.xml
@@ -15,6 +15,7 @@
   <exec_depend>python3-numpy</exec_depend>
   <exec_depend>python3-pyproj</exec_depend>
   <exec_depend>python3-shapely</exec_depend>
+  <exec_depend>python3-geopandas</exec_depend>
 
   <!--Test Dependencies-->
   <test_depend>ament_copyright</test_depend>
