--- a/src/website/.env.production
+++ b/src/website/.env.production
@@ -1,4 +1,4 @@
-MONGODB_URI=mongodb://localhost:27017/sailbot_db
+MONGODB_URI=mongodb+srv://${MONGO_USER}:${MONGO_PASSWORD}@sailbotdeployment.du6ww.mongodb.net/sailbot_db?retryWrites=true&w=majority
 NEXT_PUBLIC_SERVER_HOST=http://<HOST-IP-ADDRESS> # e.g. http://11.22.333.444
 NEXT_PUBLIC_SERVER_PORT=3005
 NEXT_PUBLIC_POLLING_TIME_MS=60000
