--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -21,13 +21,9 @@ jobs:
       with:
         python-version: '3.x'
 
-    - name: Install dependencies
+    - name: show installed python dependencies
       run: |
-        pip3 install shapely==2.0.6 numpy==1.26.4
-
-    - name: test union_all installed
-      run: |
-        python3 -c "from shapely import union_all; print('union_all imported successfully')"
+        pip3 list
 
     - name: Test
       uses: ./.github/actions/
