--- a/src/website/package.json
+++ b/src/website/package.json
@@ -21,6 +21,7 @@
     "@reduxjs/toolkit": "^1.9.5",
     "dayjs": "^1.11.10",
     "dotenv": "^16.3.1",
+    "exceljs": "^4.4.0",
     "express": "^4.18.2",
     "leaflet": "^1.9.4",
     "leaflet-defaulticon-compatibility": "^0.1.2",
@@ -45,7 +46,7 @@
     "@types/express": "^4.17.17",
     "@types/leaflet": "^1.9.7",
     "@types/node": "18.7.5",
-    "@types/react": "^18.2.37",
+    "@types/react": "^18.3.11",
     "@types/redux-logger": "^3.0.12",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
     "@typescript-eslint/parser": "^6.10.0",
@@ -57,6 +58,6 @@
     "stylelint": "^15.11.0",
     "stylelint-config-prettier-scss": "^1.0.0",
     "stylelint-config-standard-scss": "^11.1.0",
-    "typescript": "4.6.3"
+    "typescript": "^5.6.3"
   }
 }
