--- a/src/local_pathfinding/package.xml
+++ b/src/local_pathfinding/package.xml
@@ -23,6 +23,9 @@
   <test_depend>ament_pep257</test_depend>
   <test_depend>python3-pytest</test_depend>
 
+  <!--PyOMPL Packages-->
+  <depend>pyompl</depend>
+
   <export>
     <build_type>ament_python</build_type>
   </export>
