Revert "Changed the package from pyompl to python_bindings"
This reverts commit d79836a63041f736639ee792ffb82b9610887f23.

--- a/src/pyompl/CMakeLists.txt
+++ b/src/pyompl/CMakeLists.txt
@@ -1,12 +1,17 @@
-cmake_minimum_required(VERSION 3.14)
-project(python_bindings)
-
+cmake_minimum_required(VERSION 3.8)
+project(pyompl)
 
 # Options and constants
 option(STATIC_ANALYSIS "Enable clang-tidy checks" ON)
 option(UNIT_TEST "Enable unit tests" ON)
 set(CLANG_VERSION "14")
 
+# Configure the compiler
+set(CMAKE_CXX_COMPILER "/usr/bin/clang++-${CLANG_VERSION}")
+if(STATIC_ANALYSIS)
+    set(CMAKE_CXX_CLANG_TIDY "clang-tidy-${CLANG_VERSION}")
+endif()
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 # Configure build flags
 if(CMAKE_BUILD_TYPE STREQUAL "Debug")
     set(coverage_flags "-fprofile-arcs -ftest-coverage -fprofile-instr-generate -fcoverage-mapping")
@@ -20,7 +25,7 @@ endif()
 # Enable all warnings as errors except nested-anon-types, as it allows us to declare an unnamed struct within an
 # anonymous union, which is allowed in the C++ standard. This appears to be a warning specific to clang++ with
 # -Wpedantic, and does not appear with g++ or MSVC
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++20 -Wall -Wextra -fPIC -Wpedantic  -pthread")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++20 -Wall -Wextra -fPIC -Wpedantic -Wno-gnu-zero-variadic-macro-arguments -pthread")
 message(WARNING "Building Network Systems with build type '${CMAKE_BUILD_TYPE}' "
         "and flags: '${CMAKE_CXX_FLAGS}'")
 
@@ -31,16 +36,10 @@ find_package(ament_cmake REQUIRED)
 find_package(ament_cmake_python REQUIRED)
 find_package(pybind11 REQUIRED)
 find_package(Python3 COMPONENTS Interpreter Development)
+find_package(Eigen3 REQUIRED)
+find_package(ompl REQUIRED)
 
 include_directories("/usr/include/ompl-1.6")
-include_directories("/usr/include/ompl-1.6/ompl/base")
-include_directories("/usr/include/ompl-1.6/ompl/control")
-include_directories("/usr/include/ompl-1.6/ompl/geometric")
-include_directories("/usr/include/ompl-1.6/ompl/planners")
-include_directories("/usr/include/ompl-1.6/ompl/base/objectives")
-include_directories("/usr/include/ompl-1.6/ompl/base/samplers")
-include_directories("/usr/include/ompl-1.6/ompl/base/spaces")
-include_directories("/usr/include/ompl-1.6/ompl/util")
 include_directories("/usr/include/eigen3")
 pybind11_add_module(pyompl src/ompl_bindings.cpp)
 
