--- a/src/local_pathfinding/package.xml
+++ b/src/local_pathfinding/package.xml
@@ -23,7 +23,7 @@
   <test_depend>ament_pep257</test_depend>
   <test_depend>python3-pytest</test_depend>
 
-  <!--pyompl Packages-->
+  <!--PyOMPL Packages-->
   <depend>pyompl</depend>
 
   <export>
