corrected parameter value in globals.yaml

--- a/src/global_launch/config/globals.yaml
+++ b/src/global_launch/config/globals.yaml
@@ -81,5 +81,5 @@ mock_data_node:
    ros__parameters:
       qos_depth: 10
       mock_desired_heading: True
-      mock_sail_trim_tab: False
-      pub_period_sec: 1.0
+      mock_sail_trim_tab: True
+      pub_period_sec: 5.0
