--- a/src/global_launch/config/globals.yaml
+++ b/src/global_launch/config/globals.yaml
@@ -21,8 +21,8 @@ wingsail_ctrl_node:
     ros__parameters:
         reynolds_number: [0.0, 1.0, 2.0]
         angle_of_attack: [0.0, 1.0, 2.0]
-        apparent_wind_threshold: 10.0
-        scaling_coef: 1.0
+        apparent_wind_lower_threshold: 10.0
+        apparent_wind_upper_threshold: 10.0
 
 # boat_simulator parameters
 low_level_control_node:
