--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -8,5 +8,10 @@ jobs:
     test_schedule:
         runs-on: ubuntu-latest
         steps:
-            - name: ros_integration_test
-              run: ./scripts/run_integration_tests.sh
+            - name: Checkout workspace
+              uses: actions/checkout@v4
+
+            - name: Run integration tests
+              uses: ./.github/actions/
+              with:
+                script: './scripts/run-integration-tests'
