--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -2,9 +2,7 @@ on:
     schedule:
       - cron: '00 4 * * 0' # Runs at 8:00 am PST (4:00 am UTC) on Sunday
     workflow_dispatch:
-    push:
-      branches:
-        - main
+    pull_request:
 
 
 jobs:
