--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -6,7 +6,7 @@ on:
 
 
 jobs:
-    test_schedule:
+    ros_integration_test:
         runs-on: ubuntu-latest
         steps:
             - name: Checkout workspace
