--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -26,7 +26,7 @@ jobs:
           ls -ld $GITHUB_WORKSPACE/scripts/
 
       - name: Set execute permissions for scripts
-        run: chmod +x $GITHUB_WORKSPACE/scripts/run_integration_tests
+        run: chmod +x $GITHUB_WORKSPACE/scripts/run_integration_tests.sh
 
       - name: Run integration tests
-        run: $GITHUB_WORKSPACE/scripts/run_integration_tests
+        run: $GITHUB_WORKSPACE/scripts/run_integration_tests.sh
