--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -29,4 +29,4 @@ jobs:
         run: chmod +x $GITHUB_WORKSPACE/scripts/run_integration_tests.sh
 
       - name: Run integration tests
-        run: $GITHUB_WORKSPACE/scripts/run_integration_tests.sh
+        run: ./$GITHUB_WORKSPACE/scripts/run_integration_tests.sh
