--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -20,4 +20,4 @@ jobs:
       - name: ROS Integration Test
         uses: ./.github/actions/
         with:
-          script: './scripts/run_integration_tests.sh'
+          script: './scripts/run_integration_tests'
