added temp sensor parsing

--- a/src/custom_interfaces/CMakeLists.txt
+++ b/src/custom_interfaces/CMakeLists.txt
@@ -27,6 +27,7 @@ set(common_msg
   "msg/SailCmd.msg"
   "msg/WindSensor.msg"
   "msg/WindSensors.msg"
+  "msg/TempSensor.msg"
 
   # internal
   "msg/HelperAISShip.msg"
@@ -37,6 +38,7 @@ set(common_msg
   "msg/HelperLatLon.msg"
   "msg/HelperROT.msg"
   "msg/HelperSpeed.msg"
+  "msg/HelperTemp.msg"
 )
 
 # Boat simulator custom messages
