configure mgp to subscribe to gps

--- a/src/global_launch/config/globals.yaml
+++ b/src/global_launch/config/globals.yaml
@@ -12,7 +12,7 @@ mock_global_path:
       write: false
       gps_threshold: 1.5
       force: false
-navigate:
+navigate_main:
    ros__parameters:
       path_planner: "rrtstar"
 
