--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-PYTHONPATH=src:install/lib/python3.10/site-packages
+PYTHONPATH=src:install/lib/python3.10/site-packages:/workspaces/sailbot_workspace/build/integration_tests:/workspaces/sailbot_workspace/build/controller:/workspaces/sailbot_workspace/build/local_pathfinding:/workspaces/sailbot_workspace/build/boat_simulator:/workspaces/sailbot_workspace/install/local/lib/python3.10/dist-packages:/workspaces/sailbot_workspace/install/lib/python3.10/site-packages:/opt/ros/humble/local/lib/python3.10/dist-packages:/opt/ros/humble/lib/python3.10/site-packages
