--- a/src/global_launch/config/globals.yaml
+++ b/src/global_launch/config/globals.yaml
@@ -5,7 +5,7 @@
       pub_period_sec: 0.5
 
 # local_pathfinding parameters
-mgp_main:
+mock_global_path:
    ros__parameters:
       global_path_filepath: "/workspaces/sailbot_workspace/src/local_pathfinding/global_paths/mock_global_path.csv"
       interval_spacing: 30.0
