Add Sean to CODEOWNERS for pathfinding

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -25,8 +25,8 @@
 /docs/ @jamenkaye
 
 # local_pathfinding
-/notebooks/local_pathfinding @jamenkaye @FireBoyAJ24
-/src/local_pathfinding @jamenkaye @FireBoyAJ24
+/notebooks/local_pathfinding @jamenkaye @FireBoyAJ24 @SPDonaghy
+/src/local_pathfinding @jamenkaye @FireBoyAJ24 @SPDonaghy
 
 # network_systems
 /src/network_systems @samdai01
