--- a/src/network_systems/ros_info.yaml
+++ b/src/network_systems/ros_info.yaml
@@ -13,6 +13,11 @@ ros_topics:
   WIND_SENSORS: wind_sensors
   SAIL_CMD: sail_cmd
   BOAT_SIM_INPUT: boat_sim_input
+  RUDDER: rudder
+  TEMP_SENSORS: temp_sensors
+  PH_SENSORS: ph_sensors
+  SALINITY_SENSORS: salinity_sensors
+  PRESSURE_SENSORS: pressure_sensors
 
 ros_nodes:
   CAN_TRANSCEIVER: can_transceiver_node
