validated new and updated msg types

--- a/src/custom_interfaces/CMakeLists.txt
+++ b/src/custom_interfaces/CMakeLists.txt
@@ -37,6 +37,7 @@ set(common_msg
   "msg/HelperLatLon.msg"
   "msg/HelperROT.msg"
   "msg/HelperSpeed.msg"
+  "msg/HelperObstacle.msg"
 )
 
 # Boat simulator custom messages
