Integration test ros workflow (#504)
* Local Transceiver: Fix Issue with Parsing Mailbox (#500)

* this is preliminary remember to clean up

* Local transceiver updated to correct receive format, but still need to fix hanging OK issue

* try new readrsp

* Modified readRsp to read until STATUS_OK instead of DELIMITER

* test with different value

* restore deleted website file

---------

Co-authored-by: lross03 <liamyr0802@gmail.com>

* Revert "Add ROS workflows"

* Updating the integration test workflow

* Make it temperory run the workflow during a push to the branch

* Add pull request actions

* Adding integrationn test script

* Adjusting the script path

* Add chmod permissions

* Debug script location

* Adjusting the script

* Comment out chmod command

* Add chmod command

* Adjust Script run command

* Adjust the script path

* Adjusting script path

* Remove the extra sh

* Add execute permission to the bash script

* Added permissions to the path

* Make run_integration_tests.sh executable

---------

Co-authored-by: Jing <128339540+Jng468@users.noreply.github.com>
Co-authored-by: lross03 <liamyr0802@gmail.com>

--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -1,12 +1,23 @@
+name: Integration-Tests
+
 on:
     schedule:
       - cron: '00 4 * * 0' # Runs at 8:00 am PST (4:00 am UTC) on Sunday
     workflow_dispatch:
+    pull_request:
+      branches:
+        - main
+        - develop
 
 
 jobs:
-    test_schedule:
-        runs-on: ubuntu-latest
-        steps:
-            - name: ros_integration_test
-              run: ./scripts/run_integration_tests.sh
+  ros_integration_test:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout workspace
+        uses: actions/checkout@v4
+
+      - name: ROS Integration Test
+        uses: ./.github/actions/
+        with:
+          script: './scripts/run_integration_tests'
