--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -29,7 +29,7 @@
 /src/local_pathfinding @jamenkaye @FireBoyAJ24 @SPDonaghy
 
 # network_systems
-/src/network_systems @samdai01
+/src/network_systems @Jng468 @vaibhavambastha
 
 # website
 /src/website @JordanChen123
