added tests for constructing new sensors

--- a/src/custom_interfaces/CMakeLists.txt
+++ b/src/custom_interfaces/CMakeLists.txt
@@ -28,9 +28,13 @@ set(common_msg
   "msg/WindSensor.msg"
   "msg/WindSensors.msg"
   "msg/TempSensor.msg"
+  "msg/TempSensors.msg"
   "msg/PhSensor.msg"
+  "msg/PhSensors.msg"
   "msg/SalinitySensor.msg"
+  "msg/SalinitySensors.msg"
   "msg/PressureSensor.msg"
+  "msg/PressureSensors.msg"
 
   # internal
   "msg/HelperAISShip.msg"
