update to dockercompose to allow container access to hosts networking to make CAN work

--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -5,6 +5,8 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+    network_mode: host
+    privileged: true
     user: ros
     ports:
       # website
