--- a/src/global_launch/config/globals.yaml
+++ b/src/global_launch/config/globals.yaml
@@ -15,7 +15,7 @@ mock_global_path:
 navigate_main:
    ros__parameters:
       path_planner: "rrtstar"
-      use_mock_land: true
+      use_mock_land: false
 
 # controller parameters
 wingsail_ctrl_node:
