--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -5,7 +5,7 @@
 # the repo. Unless a later match takes precedence,
 # these owners will be requested for
 # review when someone opens a pull request.
-* @SPDonaghy
+* @SPDonaghy @FireBoyAJ24
 
 # boat_simulator
 /notebooks/boat_simulator @eomielan
@@ -29,7 +29,7 @@
 /src/local_pathfinding @jamenkaye @FireBoyAJ24 @SPDonaghy
 
 # network_systems
-/src/network_systems @Jng468 @vaibhavambastha
+/src/network_systems @Jng468 @vaibhavambastha @lross03
 
 # website
 /src/website @JordanChen123
