--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -19,17 +19,17 @@
 /src/controller @eomielan
 
 # diagnostics
-/src/diagnostics @samdai01
+/src/diagnostics @Jng468
 
 # docs
-/docs/ @jamenkaye
+/docs/ @FireBoyAJ24
 
 # local_pathfinding
-/notebooks/local_pathfinding @jamenkaye @FireBoyAJ24 @SPDonaghy
-/src/local_pathfinding @jamenkaye @FireBoyAJ24 @SPDonaghy
+/notebooks/local_pathfinding @FireBoyAJ24 @SPDonaghy
+/src/local_pathfinding @FireBoyAJ24 @SPDonaghy
 
 # network_systems
 /src/network_systems @Jng468 @vaibhavambastha @lross03
 
 # website
-/src/website @JordanChen123
+/src/website @JordanChen123 @fyang151
