--- a/src/website/package.json
+++ b/src/website/package.json
@@ -2,9 +2,13 @@
   "private": true,
   "scripts": {
     "postinstall": "cd tests && npm install",
-    "dev": "next dev -p 3005",
-    "build": "next build",
-    "start": "next start -p 3005",
+    "db:start": "docker compose -f ../../.devcontainer/website/docker-compose.mongodb.yml up -d",
+    "db:stop": "docker compose -f ../../.devcontainer/website/docker-compose.mongodb.yml down",
+    "web:dev": "next dev -p 3005",
+    "dev": "npm run db:start && npm run web:dev",
+    "web:build": "next build",
+    "web:start": "next start -p 3005",
+    "simulation": "bash scripts/run-simulation.sh",
     "lint": "prettier --check . && stylelint --allow-empty-input \"**/*.{css,scss}\" && next lint",
     "format": "prettier --write ."
   },
