breaking, update deps

--- a/src/website/package.json
+++ b/src/website/package.json
@@ -5,7 +5,7 @@
     "db:start": "docker compose -f ../../.devcontainer/website/docker-compose.mongodb.yml up -d",
     "db:stop": "docker compose -f ../../.devcontainer/website/docker-compose.mongodb.yml down",
     "web:dev": "next dev -p 3005",
-    "web:dev:no-api": "DISABLE_API=true next dev -p 3005",
+    "web:dev:no-api": "cross-env DISABLE_API=true next dev -p 3005",
     "dev": "npm run db:start && npm run web:dev",
     "web:build": "next build",
     "web:start": "next start -p 3005",
@@ -21,7 +21,6 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.10",
     "@mui/material": "^5.15.12",
-    "@mui/x-date-pickers": "^6.19.6",
     "@react-google-maps/api": "^2.19.2",
     "@reduxjs/toolkit": "^1.9.5",
     "dayjs": "^1.11.10",
@@ -55,6 +54,7 @@
     "@types/redux-logger": "^3.0.12",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
     "@typescript-eslint/parser": "^6.10.0",
+    "cross-env": "^10.0.0",
     "eslint": "^8.53.0",
     "eslint-config-next": "14.0.2",
     "eslint-config-prettier": "^9.0.0",
