--- a/src/website/package.json
+++ b/src/website/package.json
@@ -47,6 +47,7 @@
     "uplot-react": "^1.1.5"
   },
   "devDependencies": {
+    "@svgr/webpack": "^8.1.0",
     "@types/express": "^4.17.17",
     "@types/leaflet": "^1.9.7",
     "@types/node": "18.7.5",
