--- a/src/website/package.json
+++ b/src/website/package.json
@@ -34,6 +34,7 @@
     "mongoose": "^7.5.0",
     "next": "^14.1.3",
     "react": "^18.2.0",
+    "react-datepicker": "^8.7.0",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
     "react-redux": "^8.1.2",
@@ -52,6 +53,7 @@
     "@types/leaflet": "^1.9.7",
     "@types/node": "18.7.5",
     "@types/react": "^18.3.11",
+    "@types/react-datepicker": "^7.0.0",
     "@types/redux-logger": "^3.0.12",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
     "@typescript-eslint/parser": "^6.10.0",
