added workflow trigger to docs workflow

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -12,7 +12,7 @@ on:
         - 'docs/**'
     schedule:
       - cron: '0 0 * * 0'  # Runs on main every Sunday at midnight UTC
-
+    workflow_dispatch:
 
 jobs:
   # https://github.com/nosborn/github-action-markdown-cli
