--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,12 +3,13 @@
 	"name": "Sailbot Workspace",
 	"dockerComposeFile": [
 		"docker-compose.yml",
-		// "website/docker-compose.website.yml", // website
+		"website/docker-compose.website.yml", // website
 
 		// Uncomment the files containing the programs you need
 		// "docs/docker-compose.docs.yml", // docs
 	],
 	"service": "sailbot-workspace",
+    "forwardPorts": [3005],
 	"workspaceFolder": "/workspaces/sailbot_workspace",
 	"remoteUser": "ros",
 	"containerEnv": {
