--- a/.devcontainer/website/docker-compose.website.yml
+++ b/.devcontainer/website/docker-compose.website.yml
@@ -1,3 +1,5 @@
+#### We do not use anymore. We pulled website development out of docker in PR #614
+
 # adapted from https://github.com/microsoft/vscode-dev-containers/blob/main/containers/javascript-node-mongo/.devcontainer/docker-compose.yml
 # Note: the "ports" property in this file will not forward from a codespace; add to "forwardPorts" in devcontainer.json instead
 services:
