Update power off script to use ssh over localhost, and mount key from host into container

--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -18,6 +18,7 @@ services:
       - ..:/workspaces/sailbot_workspace:cached
       - sailbot-new-project-bashhistory:/home/ros/commandhistory:delegated
       - sailbot-new-project-roslog:/home/ros/.ros/log:delegated
+      - ~/.ssh/id_ed25519:/home/ros/.ssh/id_ed25519
 
     # Overrides default command so things don't shut down after the process ends.
     command: sleep infinity
