--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -44,37 +44,40 @@
         "yzhang.markdown-all-in-one",
         // "zachflower.uncrustify",
 
-        // UBCSailbot
-        "awesomektvn.toggle-semicolon",
-        "bierner.github-markdown-preview",
-        "christian-kohler.path-intellisense",
-        "cschlosser.doxdocgen",
-        "DavidAnson.vscode-markdownlint",
-        "eamodio.gitlens",
-        // "github.copilot",
-        "github.vscode-github-actions",
-        "Gruntfuggly.todo-tree",
-        "jebbs.plantuml",
-        "jeff-hykin.better-cpp-syntax",
-        "KevinRose.vsc-python-indent",
-        "llvm-vs-code-extensions.vscode-clangd",
-        "matepek.vscode-catch2-test-adapter",
-        "mechatroner.rainbow-csv",
-        "mongodb.mongodb-vscode",
-        "ranch-hand-robotics.rde-ros-2",
-        "ms-python.black-formatter",
-        "ms-python.isort",
-        "ms-python.vscode-pylance",
-        "ms-toolsai.jupyter",
-        "ms-vsliveshare.vsliveshare",
-        "ms-python.mypy-type-checker",
-        "njpwerner.autodocstring",
-        "randomfractalsinc.geo-data-viewer",
-        "stevejpurves.cucumber",
-        "streetsidesoftware.code-spell-checker",
-        "vscode-icons-team.vscode-icons",
-        "zxh404.vscode-proto3"
-      ]
-    }
-  }
+				// UBCSailbot
+				"awesomektvn.toggle-semicolon",
+				"bierner.github-markdown-preview",
+				"christian-kohler.path-intellisense",
+				"cschlosser.doxdocgen",
+				"DavidAnson.vscode-markdownlint",
+				"eamodio.gitlens",
+				// "github.copilot",
+				"github.vscode-github-actions",
+				"Gruntfuggly.todo-tree",
+				"jebbs.plantuml",
+				"jeff-hykin.better-cpp-syntax",
+				"KevinRose.vsc-python-indent",
+				"llvm-vs-code-extensions.vscode-clangd",
+				"matepek.vscode-catch2-test-adapter",
+				"mechatroner.rainbow-csv",
+				"mongodb.mongodb-vscode",
+				"ranch-hand-robotics.rde-ros-2",
+				"ms-python.black-formatter",
+				"ms-python.isort",
+				"ms-python.vscode-pylance",
+				"ms-toolsai.jupyter",
+				"ms-vsliveshare.vsliveshare",
+				"ms-python.mypy-type-checker",
+				"njpwerner.autodocstring",
+				"randomfractalsinc.geo-data-viewer",
+				"stevejpurves.cucumber",
+				"streetsidesoftware.code-spell-checker",
+				"vscode-icons-team.vscode-icons",
+				"zxh404.vscode-proto3"
+			]
+		}
+	},
+	"features": {
+  		"ghcr.io/devcontainers/features/docker-in-docker:2": {}
+	}
 }
