--- a/.github/workflows/build-release-image.yml
+++ b/.github/workflows/build-release-image.yml
@@ -1,4 +1,4 @@
-name: Build Images
+name: Build Release Image
 
 on:
   workflow_dispatch:
@@ -24,7 +24,7 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
         with:
-          platforms: linux/arm64,linux/amd64
+          platforms: linux/arm64
 
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
@@ -33,15 +33,20 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.PAT_TOKEN }}
 
-      - name: Build and push dev
+      - name: Generate CACHEBUST timestamp
+        id: meta
+        run: echo "timestamp=$(($(date +%s%3N)))" >> $GITHUB_OUTPUT
+
+      - name: Build and push release
         uses: docker/build-push-action@v6
         with:
-          context: "{{defaultContext}}:.devcontainer/base-dev"
-          file: base-dev.Dockerfile
+          context: "{{defaultContext}}"
+          file: .devcontainer/release/release.Dockerfile
+          build-args: CACHEBUST=${{ steps.meta.outputs.timestamp }}
           push: true
           tags: |
-            ghcr.io/ubcsailbot/sailbot_workspace/dev:${{ inputs.tag }}
-            ghcr.io/ubcsailbot/sailbot_workspace/dev:latest
-          platforms: linux/arm64,linux/amd64
+            ghcr.io/ubcsailbot/sailbot_workspace/release:${{ inputs.tag }}
+            ghcr.io/ubcsailbot/sailbot_workspace/release:latest
+          platforms: linux/arm64
           cache-from: type=gha
           cache-to: type=gha,mode=max
