--- a/.github/workflows/build-release-image.yml
+++ b/.github/workflows/build-release-image.yml
@@ -1,4 +1,4 @@
-name: Build Release Image test
+name: Build Release Image
 
 on:
   workflow_dispatch:
@@ -7,7 +7,6 @@ on:
         description: 'Tag of the Docker image'
         required: true
         type: string
-  pull_request:
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -19,9 +18,6 @@ jobs:
     timeout-minutes: 240
 
     steps:
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
-
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
         with:
