--- a/.github/workflows/build-release-image.yml
+++ b/.github/workflows/build-release-image.yml
@@ -7,6 +7,8 @@ on:
         description: 'Tag of the Docker image'
         required: true
         type: string
+  pull_request:
+    types: [opened, reopened]
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
