Undo changes for build-release-image workflow testing

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -6,7 +6,7 @@ ARG HOME=/home/${USERNAME}
 COPY --chown=${USERNAME}:${USERNAME} config ${HOME}
 
 # # Uncomment this section to install additional apt packages
-# ENV DEBIAN_FRONTEND=nonintesudo dpkg --configure -aractive
+# ENV DEBIAN_FRONTEND=nonintesudo
 # RUN apt-get update \
 #     && apt-get install -y --no-install-recommends \
 #         # Your package list here
