Optimize docker release image build process (#670)
* Removed arm64 emulation on GitHub Release Image workflow.
Moved setup.sh to base-dev docker image.

* fix docker ignore

* changed base-dev docker context in build base-dev image GItHub workflow

* add running setup.sh in base-dev.Dockerfile

* FIX Dockerfile path typo in build-base-dev-images yml.
Return devcontainer base image back to deferred path variable execution

* Modify build release image workflow for testing on feature branch.

* Undo modifications for workflow testing
forgot to remove the QEMU step!!

* Remodify build release image workflow for testing on feature branch.

* Undo changes for build-release-image workflow testing

--- a/.github/workflows/build-base-dev-images.yml
+++ b/.github/workflows/build-base-dev-images.yml
@@ -36,8 +36,8 @@ jobs:
             - name: Build and push dev
               uses: docker/build-push-action@v6
               with:
-                  context: "{{defaultContext}}:.devcontainer/base-dev"
-                  file: base-dev.Dockerfile
+                  context: "{{defaultContext}}"
+                  file: .devcontainer/base-dev/base-dev.Dockerfile
                   push: true
                   tags: |
                       ghcr.io/ubcsailbot/sailbot_workspace/dev:${{ inputs.tag }}
