--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -16,6 +16,7 @@
   "containerEnv": {
     "LIBGL_ALWAYS_SOFTWARE": "1" // Needed for software rendering of opengl
   },
+  "postCreateCommand": "./scripts/setup.sh",
   // Set *default* container specific settings.json values on container create.
   "customizations": {
     "vscode": {
@@ -75,5 +76,8 @@
 				"zxh404.vscode-proto3"
 			]
 		}
+	},
+	"features": {
+  		"ghcr.io/devcontainers/features/docker-in-docker:2": {}
 	}
 }
