--- a/src/local_pathfinding/package.xml
+++ b/src/local_pathfinding/package.xml
@@ -19,6 +19,7 @@
   <exec_depend>python3-plotly</exec_depend>
   <exec_depend>python3-dash</exec_depend>
   <exec_depend>python3-anywidget</exec_depend>
+  <exec_depend>python3-scipy</exec_depend>
 
 
 
