will revert. Just got this for testing

--- a/.github/workflows/deploy-website.yml
+++ b/.github/workflows/deploy-website.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main
+      - web-653-autobuild-web  # Temporary for testing
     paths:
       - 'src/website/**'
       - '.github/workflows/deploy-website.yml'
