i think it works

--- a/src/website/.env.production
+++ b/src/website/.env.production
@@ -2,3 +2,9 @@ MONGODB_URI=mongodb+srv://${MONGO_USER}:${MONGO_PASSWORD}@<CLUSTER_URL>/<DB_NAME
 NEXT_PUBLIC_SERVER_HOST=http://<HOST-IP-ADDRESS> # e.g. http://11.22.333.444
 NEXT_PUBLIC_SERVER_PORT=3005
 NEXT_PUBLIC_POLLING_TIME_MS=60000
+AISSTREAM_API_KEY=your_aisstream_api_key
+AISSTREAM_BOUNDING_BOXES=[[[-90,-180],[90,180]]]
+AISSTREAM_FILTER_SHIP_MMSI=
+AISSTREAM_FILTER_MESSAGE_TYPES=PositionReport,StandardClassBPositionReport,ExtendedClassBPositionReport,ShipStaticData
+AISSTREAM_FLUSH_INTERVAL_MS=15000
+AISSTREAM_MAX_SNAPSHOTS=50
