--- a/src/website/.env.development
+++ b/src/website/.env.development
@@ -2,3 +2,9 @@ MONGODB_URI=mongodb://localhost:27017/sailbot_db
 NEXT_PUBLIC_SERVER_HOST=http://localhost
 NEXT_PUBLIC_SERVER_PORT=3005
 NEXT_PUBLIC_POLLING_TIME_MS=60000
+AISSTREAM_API_KEY=0a863efa19b8a99972b30a32096b28084d741842
+AISSTREAM_BOUNDING_BOXES=[[[49.4575347559468, -123.99076224671273], [49.014597888306724, -123.11014727024457]]]
+AISSTREAM_FILTER_SHIP_MMSI=
+AISSTREAM_FILTER_MESSAGE_TYPES=PositionReport,StandardClassBPositionReport,ExtendedClassBPositionReport,ShipStaticData
+AISSTREAM_FLUSH_INTERVAL_MS=15000
+AISSTREAM_MAX_SNAPSHOTS=50  
