Added a test for checking that echo server received data correctly (Currently FAILING)

--- a/src/network_systems/projects/local_transceiver/CMakeLists.txt
+++ b/src/network_systems/projects/local_transceiver/CMakeLists.txt
@@ -2,10 +2,12 @@ set(module local_transceiver)
 
 set(link_libs
     ${PROTOBUF_LINK_LIBS}
+    ${CURL_LIBRARIES}
 )
 
 set(inc_dirs
     ${PROTOBUF_INCLUDE_PATH}
+    ${CURL_INCLUDE_DIR}
 )
 
 set(compile_defs
