--- a/src/local_pathfinding/custom-rosdep.yaml
+++ b/src/local_pathfinding/custom-rosdep.yaml
@@ -12,3 +12,8 @@ python3-anywidget:
   ubuntu:
     pip:
       packages: [anywidget]
+
+python3-shapely2:
+  ubuntu:
+    pip:
+      packages: [shapely==2.1.2]
