--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,63 +1,76 @@
 name: Tests
 
 on:
-  push:
-    branches:
-      - main
-      - raye
-  pull_request:
-  workflow_dispatch:
+    push:
+        branches:
+            - main
+            - raye
+    pull_request:
+    workflow_dispatch:
 
 jobs:
-  colcon-test:
-    runs-on: ubuntu-latest
-    timeout-minutes: 10
-    steps:
-    - name: Checkout workspace
-      uses: actions/checkout@v6
+    colcon-test:
+        runs-on: ubuntu-latest
+        timeout-minutes: 10
+        steps:
+            - name: Checkout workspace
+              uses: actions/checkout@v6
 
-    - name: Set up Python
-      uses: actions/setup-python@v6
-      with:
-        python-version: '3.x'
+            - name: Set up Python
+              uses: actions/setup-python@v6
+              with:
+                  python-version: "3.x"
 
-    - name: show installed python dependencies
-      run: |
-        pip3 list
+            - name: show installed python dependencies
+              run: |
+                  pip3 list
 
-    - name: Test
-      uses: ./.github/actions/
-      with:
-        script: './scripts/run-tests'
-        run-website: 'true'
+            - name: Test
+              uses: ./.github/actions/
+              with:
+                  script: "./scripts/run-tests"
+                  run-website: "true"
 
-  ament-lint:
-    strategy:
-      fail-fast: false
-      matrix:
-          # mypy and ament_lint_common, except for copyright, cppcheck, cpplint, uncrustify, and pep257
-          linter: [lint_cmake, flake8, mypy, xmllint]
-    name: ament_${{ matrix.linter }}
-    runs-on: ubuntu-latest
-    timeout-minutes: 5
-    steps:
-    - name: Checkout workspace
-      uses: actions/checkout@v6
+    ros-launch-test:
+        runs-on: ubuntu-latest
+        timeout-minutes: 5
+        steps:
+            - name: Checkout workspace
+              uses: actions/checkout@v6
 
-    - name: Run linter
-      uses: ./.github/actions/
-      with:
-        script: './scripts/ament-lint'
-        linter: ${{ matrix.linter }}
+            - name: Launch
+              uses: ./.github/actions/
+              with:
+                  script: "./scripts/test-ros-launch.sh"
+                  run-website: "false"
 
-  clang-tidy:
-    runs-on: ubuntu-latest
-    timeout-minutes: 15
-    steps:
-    - name: Checkout workspace
-      uses: actions/checkout@v6
+    ament-lint:
+        strategy:
+            fail-fast: false
+            matrix:
+                # mypy and ament_lint_common, except for copyright, cppcheck, cpplint, uncrustify, and pep257
+                linter: [lint_cmake, flake8, mypy, xmllint]
+        name: ament_${{ matrix.linter }}
+        runs-on: ubuntu-latest
+        timeout-minutes: 5
+        steps:
+            - name: Checkout workspace
+              uses: actions/checkout@v6
 
-    - name: Run linter
-      uses: ./.github/actions/
-      with:
-        script: './scripts/clang-tidy'
+            - name: Run linter
+              uses: ./.github/actions/
+              with:
+                  script: "./scripts/ament-lint"
+                  linter: ${{ matrix.linter }}
+
+    clang-tidy:
+        runs-on: ubuntu-latest
+        timeout-minutes: 15
+        steps:
+            - name: Checkout workspace
+              uses: actions/checkout@v6
+
+            - name: Run linter
+              uses: ./.github/actions/
+              with:
+                  script: "./scripts/clang-tidy"
