--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -41,6 +41,7 @@ jobs:
             - name: Launch
               uses: ./.github/actions/
               with:
+                  run: chmod -R u+w $GITHUB_WORKSPACE
                   script: "./scripts/test-ros-launch"
                   run-website: "false"
 
