--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -39,7 +39,7 @@ jobs:
               uses: actions/checkout@v6
 
             - name: Make workspace writable
-              run: chmod -R u+w $GITHUB_WORKSPACE
+              run: sudo chmod -R u+w $GITHUB_WORKSPACE
 
             - name: Launch
               uses: ./.github/actions/
