add downloads page, revamp about page, install gsap for animations, minor css change to header

--- a/src/website/package.json
+++ b/src/website/package.json
@@ -5,10 +5,14 @@
     "db:start": "docker compose -f ../../.devcontainer/website/docker-compose.mongodb.yml up -d",
     "db:stop": "docker compose -f ../../.devcontainer/website/docker-compose.mongodb.yml down",
     "web:dev": "next dev -p 3005",
+    "web:dev:host": "next dev -p 3005 --hostname 0.0.0.0",
     "web:dev:no-api": "cross-env DISABLE_API=true next dev -p 3005",
+    "web:dev:no-api:host": "cross-env DISABLE_API=true next dev -p 3005 --hostname 0.0.0.0",
     "dev": "npm run db:start && npm run web:dev",
+    "dev:host": "npm run db:start && npm run web:dev:host",
     "web:build": "next build",
     "web:start": "next start -p 3005",
+    "web:start:host": "next start -p 3005 --hostname 0.0.0.0",
     "simulation": "bash scripts/run-simulation.sh",
     "lint": "prettier --check . && stylelint --allow-empty-input \"**/*.{css,scss}\" && next lint",
     "format": "prettier --write ."
@@ -20,6 +24,7 @@
     "@reduxjs/toolkit": "^1.9.5",
     "dotenv": "^16.3.1",
     "exceljs": "^4.4.0",
+    "gsap": "^3.14.2",
     "leaflet": "^1.9.4",
     "leaflet-defaulticon-compatibility": "^0.1.2",
     "leaflet-geometryutil": "^0.10.2",
